--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./App.js"></script>
+    <script src="./AppClassComponent.js"></script>
   </body>
 </html>
